Flatpak updates are stuck in "Installing" state when flatpak update was already done outside gnome-software
Hi,
I noticed that the flatpak updates are stuck in the "Installing" state, when I executed flatpak update
outside the gnome-software. See screenshot:
How to reproduce:
flatpak update
- Open gnome-software -> Updates
- Click "Update All"
Version: gnome-software-3.32.0-3.fc30.x86_64